--- a/contact.html
+++ b/contact.html
@@ -18,16 +18,6 @@
 </head>
 
 <body>
-    <div class="brand-wrapper">
-        <div class="container">
-            <div class="brand">
-                <a href="index.html">
-                    <img src="img/logo.png" class="logo"></img>Catalyst Technical Group, INC.
-                </a>
-            </div>
-        </div>
-    </div>
-
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -38,60 +28,40 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">CTG, INC.</a>
+            </div><div class="header-wrapper">
+                <div class="logo-wrapper">
+                    <a class="logo-link" href="index.html">
+                        <img src="img/logo.png" class="logo"></img>
+                    </a>
+                </div>
+                <div class="navigation-wrapper">
+                    <div class="brand">
+                        <span>Catalyst Technical Group, INC.</span>
+                        <span class="contact-number">713.906.6177</span>
+                    </div>
+                    <div class="collapse navbar-collapse navbar-ex1-collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="index.html">Home</a>
+                            </li>
+                            <li><a href="projects.html">Projects</a>
+                            </li>
+                            <li><a href="services.html">Services</a>
+                            </li>
+                            <li><a href="resources.html">Resources</a>
+                            </li>
+                            <li><a href="contact.html" class="active">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li><a href="projects.html">Projects</a>
-                    </li>
-                    <li><a href="services.html">Services</a>
-                    </li>
-                    <li><a href="resources.html">Resources</a>
-                    </li>
-                    <li><a href="contact.html" class="active">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
 
     <div class="container">
-
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Contact <strong>CTG, INC.</strong>
-                    </h2>
-                    <hr>
-                </div>
-                <div class="col-md-8">
-                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3464.188148441147!2d-95.7751626!3d29.743267500000016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864121263380d9a5%3A0x66a3a353c8d86438!2s23501+Cinco+Ranch+Blvd+%23113!5e0!3m2!1sen!2sus!4v1401151969202" width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                </div>
-                <div class="col-md-4">
-                    <p>Phone: <strong>713.906.6177</strong>
-                    </p>
-                    <p>Email: <strong>info@texasctgroup.com</strong>
-                    </p>
-                    <p>Address: <strong><br>Catalyst Technical Group, INC.<br>23501 Cinco Ranch Blvd, <br>Suite H120 #113<br>Katy, TX 77494</strong>
-                    </p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Contact <strong>form</strong>
-                    </h2>
-                    <hr>
                     <p id="message" class="alert">
                     </p>
                     <form role="form" id="formContactUs">
@@ -122,6 +92,25 @@
                 </div>
             </div>
         </div>
+        
+        <div class="row">
+            <div class="box">
+                <div class="col-md-8">
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3464.188148441147!2d-95.7751626!3d29.743267500000016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864121263380d9a5%3A0x66a3a353c8d86438!2s23501+Cinco+Ranch+Blvd+%23113!5e0!3m2!1sen!2sus!4v1401151969202" width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                </div>
+                <div class="col-md-4">
+                    <p>Phone: <strong>713.906.6177</strong>
+                    </p>
+                    <p>Email: <strong>info@texasctgroup.com</strong>
+                    </p>
+                    <p>Address: <strong><br>Catalyst Technical Group, INC.<br>23501 Cinco Ranch Blvd, <br>Suite H120 #113<br>Katy, TX 77494</strong>
+                    </p>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
+
     </div>
     <!-- /.container -->
 
