--- a/projects.html
+++ b/projects.html
@@ -18,18 +18,6 @@
 </head>
 
 <body>
-
-
-    <div class="brand-wrapper">
-        <div class="container">
-            <div class="brand">
-                <a href="index.html">
-                    <img src="img/logo.png" class="logo"></img>Catalyst Technical Group, INC.
-                </a>
-            </div>
-        </div>
-    </div>
-
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -40,26 +28,34 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">CTG, INC.</a>
+            </div><div class="header-wrapper">
+                <div class="logo-wrapper">
+                    <a class="logo-link" href="index.html">
+                        <img src="img/logo.png" class="logo"></img>
+                    </a>
+                </div>
+                <div class="navigation-wrapper">
+                    <div class="brand">
+                        <span>Catalyst Technical Group, INC.</span>
+                        <span class="contact-number">713.906.6177</span>
+                    </div>
+                    <div class="collapse navbar-collapse navbar-ex1-collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="index.html">Home</a>
+                            </li>
+                            <li><a href="projects.html" class="active">Projects</a>
+                            </li>
+                            <li><a href="services.html">Services</a>
+                            </li>
+                            <li><a href="resources.html">Resources</a>
+                            </li>
+                            <li><a href="contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li><a href="about.html" class="active">Projects</a>
-                    </li>
-                    <li><a href="services.html">Services</a>
-                    </li>
-                    <li><a href="resources.html">Resources</a>
-                    </li>
-                    <li><a href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
 
     <div class="container">
